--- a/source/refs.bib
+++ b/source/refs.bib
@@ -9,7 +9,7 @@ doi = {10.1002/jcc.20035},
 year = {2004}
 }
 
-@article{doi：org/10.1002/prot.21123,
+@article{doi：10.1002/prot.21123,
 author = {Hornak, Viktor and Abel, Robert and Okur, Asim and Strockbine, Bentley and Roitberg, Adrian and Simmerling, Carlos},
 title = {Comparison of multiple Amber force fields and development of improved protein backbone parameters},
 journal = {Proteins: Structure, Function, and Bioinformatics},
