--- a/source/refs.bib
+++ b/source/refs.bib
@@ -1,4 +1,4 @@
-@article{doi：10.1002/jcc.20035,
+@article{doi:10.1002/jcc.20035,
 author = {Wang, Junmei and Wolf, Romain M. and Caldwell, James W. and Kollman, Peter A. and Case, David A.},
 title = {Development and testing of a general amber force field},
 journal = {Journal of Computational Chemistry},
@@ -9,7 +9,7 @@ doi = {10.1002/jcc.20035},
 year = {2004}
 }
 
-@article{doi：10.1002/prot.21123,
+@article{doi:10.1002/prot.21123,
 author = {Hornak, Viktor and Abel, Robert and Okur, Asim and Strockbine, Bentley and Roitberg, Adrian and Simmerling, Carlos},
 title = {Comparison of multiple Amber force fields and development of improved protein backbone parameters},
 journal = {Proteins: Structure, Function, and Bioinformatics},
@@ -97,7 +97,7 @@ year = {2004},
 doi = {10.1021/jp0363287},
 }
 
-@article{doi：10.1002/jcc.21367,
+@article{doi:10.1002/jcc.21367,
 author = {Vanommeslaeghe, K. and Hatcher, E. and Acharya, C. and Kundu, S. and Zhong, S. and Shim, J. and Darian, E. and Guvench, O. and Lopes, P. and Vorobyov, I. and Mackerell Jr., A. D.},
 title = {CHARMM general force field: A force field for drug-like molecules compatible with the CHARMM all-atom additive biological force fields},
 journal = {Journal of Computational Chemistry},
