--- a/source/refs.bib
+++ b/source/refs.bib
@@ -176,7 +176,7 @@ doi = {10.1002/jcc.540150207},
 year = {1994}
 }
 
-@article{doi:10.1021/ja00086a030,
+@inbook{doi:10.1021/ja00086a030,
 author = {Sun, Huai and Mumby, Stephen J. and Maple, Jon R. and Hagler, Arnold T.},
 title = {An ab Initio CFF93 All-Atom Force Field for Polycarbonates},
 journal = {Journal of the American Chemical Society},
